fix: сode readability ProductScreen

--- a/online-store/src/views/pages/Product/ProductScreen.scss
+++ b/online-store/src/views/pages/Product/ProductScreen.scss
@@ -14,8 +14,8 @@
       &::after {
         content: '/';
         position: absolute;
-        right: -14px;
-        top: 1px;
+        right: -1.4rem;
+        top: 0.1rem;
         font-weight: 700;
         font-size: 2rem;
         line-height: 2.6rem;
@@ -75,7 +75,7 @@
 
     img {
       cursor: pointer;
-      max-height: 600px;
+      max-height: 60rem;
       max-width: 100%;
       width: 100%;
       height: 100%;
@@ -91,7 +91,7 @@
       flex-direction: row;
       align-items: center;
       justify-content: center;
-      margin-top: 24px;
+      margin-top: 2.4rem;
       width: 100%;
     }
   }
@@ -153,7 +153,7 @@
 
 .product-menu {
   &__item {
-    border-top: 1px solid var(--gray-color);
+    border-top: 0.1rem solid var(--gray-color);
     padding: 1.5rem 0;
 
     &:last-child {
